# varese-ordinanze-push-notifier

./: .gitignore  Cargo.toml  docker-compose.yml
.docker/: Dockerfile
.github/workflows/: rust.yml
src/: main.rs
